ncc/testsuite/positive/bug1030.n
while (true) {
 def _ = 7;
 12 // W: ignored
}
